# Canvas-C-

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.hpp  README.md  main.cpp
src/cli/: main_cli.cpp
src/core/: Canvas.cpp  Canvas.hpp  CanvasIO.cpp  CanvasIO.hpp  CanvasManager.cpp  CanvasManager.hpp  Color.hpp  Drawing.cpp  Drawing.hpp  History.cpp  History.hpp
src/gui/: CanvasView.cpp  CanvasView.hpp  MainWindow.cpp  MainWindow.hpp  main_gui.cpp
